# StreamDock-Device-SDK

./: README.md
Python-Linux-SDK/src/StreamDock/: ProductIDs.py
Python-Mac_ARM64-SDK/: pyproject.toml  test_list.py
