[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "streamdock"
version = "0.1.1"
description = "A Python package to control streamdock device: https://bbs.key123.vip"
authors = [
  { name = "Hugo Zhu", email = "hugozhu@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
dependencies = [
  "hidapi>=0.14.0",
  "pillow"
]
requires-python = ">=3.10.0"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
